Update seo generator and api server functionality
